# mlir-hlo

./: .gitignore  BUILD  BZLMOD_MIGRATION.md  CMakeLists.txt  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod
stablehlo/: .bazelignore  .bazelrc  .bazelversion  .markdownlint.yaml  BUILD  BUILD.bazel  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod
stablehlo/build_tools/: README.md  build_mlir.sh  llvm_version.txt  mlir.patch  update_version_h_cpp.sh  utils.bzl
stablehlo/build_tools/github_actions/: ci_build_bazel.sh  ci_build_cmake.sh  ci_build_cmake_code_coverage.sh  ci_build_cmake_llvm.sh  ci_build_docs.sh  ci_build_llvm.sh  ci_build_python_wheel.sh  ci_build_stablehlo.sh  ci_build_stablehlo_python_api.sh  lint_buildifier.sh  lint_check_license.sh  lint_clang_format.sh  lint_llvm_commit.sh  lint_markdown.sh  lint_shellcheck.sh  lint_version.sh  lint_whitespace_checks.sh  llvm_gcov.sh
stablehlo/build_tools/integrate/: README.md  llvm_bump_revision.sh  stablehlo_tag_and_bump_version.sh
stablehlo/build_tools/math/: README.md  generate_ChloDecompositionPatternsMath.py  generate_tests.py
stablehlo/cmake/: SetupSanitizers.cmake
stablehlo/docs/: _toc.yaml  awesome.md  bytecode.md  compatibility.md  dynamism.md  governance.md  ide.md  interpreter.md  interpreter_status.md  quantization.md  reference.md  reference_checklist.md  roadmap.md  spec.md  spec_checklist.md  spec_draft.md  status.md  type_inference.md  vhlo.md  vhlo_checklist.md
stablehlo/docs/tutorials/: jax-export.ipynb  pytorch-export.ipynb  savedmodel-embed.ipynb
stablehlo/examples/: CMakeLists.txt
stablehlo/examples/c++/: BUILD.bazel  CMakeLists.txt  ExampleAdd.cpp  README.md  stablehlo_add.cpp
stablehlo/examples/python/: CMakeLists.txt  README.md  stablehlo_add.py
stablehlo/rfcs/: 20220912-compatibility.md  20221031-fp8.md  20230210-sparsity.md  20230309-compatibility.md  20230309-e4m3b11.md  20230321-fp8_fnuz.md  20230517-forward-compatibility-testing.md  20230525-compatibility.md  20230528-linalg.md  20230609-extensibility.md  20230622-quantized-reduction.md  20230623-compatibility.md  20230704-dynamism-101.md  20231005-hybrid-quantization.md  20231017-collective-broadcast.md  20240311-gather-scatter-batching-dims.md  20240312-standardize-collective-ops.md  20240312-standardize-customcallop.md  20240312-tanop.md  20240315-algorithm-support.md  20240503-opset-deprecations.md  20240620-int2.md  20240808-f8E4M3_f8E3M4.md  20241001-microscaling-formats.md  20241015-result-accuracy.md  20250421-source-target-pairs.md  20250729-buffer.md
stablehlo/stablehlo/: CMakeLists.txt
stablehlo/stablehlo/api/: CMakeLists.txt  PortableApi.cpp  PortableApi.h
stablehlo/stablehlo/conversions/: CMakeLists.txt
stablehlo/stablehlo/dialect/: AssemblyFormat.cpp  AssemblyFormat.h  Base.cpp  Base.h  Base.td  BroadcastUtils.cpp  BroadcastUtils.h  CMakeLists.txt  ChloBytecode.cpp  ChloEnums.td  ChloOps.cpp  ChloOps.h  ChloOps.td  ExperimentalOps.cpp  ExperimentalOps.h  Register.cpp  Serialization.cpp  Serialization.h  StablehloAttrs.td  StablehloBytecode.cpp  StablehloEnums.td  StablehloOps.cpp  StablehloOps.h  StablehloOps.td  StablehloTypes.td  TypeInference.cpp  TypeInference.h  Version.cpp  Version.h  VhloAttrs.td  VhloBase.td  VhloBytecode.cpp  VhloDialect.td  VhloEnums.td  VhloOps.cpp  VhloOps.h  VhloOps.td  VhloTypes.cpp  VhloTypes.h  VhloTypes.td
stablehlo/stablehlo/experimental/: BUILD  BUILD.bazel  CMakeLists.txt
stablehlo/stablehlo/reference/: Api.cpp  Api.h  Axes.cpp  Axes.h  CMakeLists.txt  Configuration.cpp  Element.cpp  Element.h  Errors.cpp  Errors.h  Index.cpp  Index.h  Interpreter.cpp  Interpreter.h  InterpreterApi.cpp  InterpreterApi.h  InterpreterConfiguration.cpp  InterpreterConfiguration.h  InterpreterInstrumentWithProbe.cpp  InterpreterOps.cpp  InterpreterOps.h  InterpreterOps.td  InterpreterPasses.h  InterpreterPasses.td  InterpreterValue.cpp  InterpreterValue.h  NumPy.cpp  Ops.cpp  Ops.h  Process.cpp  Process.h  ProcessGrid.cpp  ProcessGrid.h  Scope.cpp  Scope.h  Sizes.cpp  Sizes.h  Tensor.cpp  Tensor.h  Token.cpp  (+3 more)
stablehlo/stablehlo/testdata/: BUILD.bazel  CMakeLists.txt  abs_bfloat16_20_20.mlir  abs_complex128_20_20.mlir  abs_complex64_20_20.mlir  abs_float16_20_20.mlir  abs_float32_20_20.mlir  abs_float64_20_20.mlir  abs_int16_20_20.mlir  abs_int32_20_20.mlir  abs_int64_20_20.mlir  abs_int8_20_20.mlir  abs_shape_bfloat16_20_20.mlir  abs_shape_bfloat16_20_20.mlir.0_9_0.bc  abs_shape_bfloat16_20_20_.mlir  abs_shape_complex64_20_20.mlir  abs_shape_complex64_20_20.mlir.0_9_0.bc  abs_shape_complex64_20_20_.mlir  abs_shape_float16_20_20.mlir  abs_shape_float16_20_20.mlir.0_9_0.bc  abs_shape_float16_20_20_.mlir  abs_shape_float32_20_20.mlir  abs_shape_float32_20_20.mlir.0_9_0.bc  abs_shape_float32_20_20_.mlir  abs_shape_int16_20_20.mlir  abs_shape_int16_20_20.mlir.0_9_0.bc  abs_shape_int16_20_20_.mlir  abs_shape_int32_20_20.mlir  abs_shape_int32_20_20.mlir.0_9_0.bc  abs_shape_int32_20_20_.mlir  abs_shape_int8_20_20.mlir  abs_shape_int8_20_20.mlir.0_9_0.bc  abs_shape_int8_20_20_.mlir  acos_bfloat16_20_20.mlir  acos_complex128_20_20_chlo.mlir  acos_complex64_20_20_chlo.mlir  acos_float16_20_20.mlir  acos_float32_20_20.mlir  acos_float64_20_20.mlir  acos_shape_bfloat16_20_20.mlir  (+10655 more)
stablehlo/stablehlo/tests/: BUILD.bazel  CMakeLists.txt  CheckOps.cpp  CheckOps.h  CheckOps.td  TestUtils.cpp  TestUtils.td  canonicalize.mlir  infer_chlo.mlir  infer_stablehlo.mlir  interpret_abs.mlir  interpret_add.mlir  interpret_after_all.mlir  interpret_all_gather.mlir  interpret_all_reduce.mlir  interpret_all_to_all.mlir  interpret_and.mlir  interpret_atan2.mlir  interpret_batch_norm_grad.mlir  interpret_batch_norm_inference.mlir  interpret_batch_norm_training.mlir  interpret_bitcast_convert.mlir  interpret_broadcast_in_dim.mlir  interpret_case.mlir  interpret_ceil.mlir  interpret_cholesky.mlir  interpret_clamp.mlir  interpret_collective_permute.mlir  interpret_compare.mlir  interpret_complex.mlir  (+128 more)
(+889 files in other folders)
